--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,33 @@
   spring:
     application:
       name: inco-xtgl
+  feign:
+    httpclient:
+      enabled: true
+    hystrix:
+      enabled: true
+  hystrix:
+    command:
+      default:
+        execution:
+          timeout:
+            enabled: true
+          isolation:
+            thread:
+              timeoutInMilliseconds: 1000 #该配置需要比ribbon超时时间长
+        circuitBreaker:
+          requestVolumeThreshold: 1000
+    threadpool:
+      default:
+        coreSize: 60
+        maxQueueSize: 200
+        queueSizeRejectionThreshold: 200
+
+  ribbon:
+    ReadTimeout: 500
+    ConnectTimeout: 500
+    ExecTimeout: 500
+    MaxAutoRetries: 1 #最好设置超时重试
 
   eureka:
     instance:
@@ -29,6 +56,3 @@
         enabled: true
       serviceUrl:
         defaultZone: http://xiaoxinmo:xiaoxinmo@localhost:8081/eureka/
-  feign:
-    hystrix:
-      enabled: true
