--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.inco</groupId>
+            <artifactId>pub</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
 
+        </dependency>
 
 
     </dependencies>
