--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <dependency>
+     <!--   <dependency>
             <groupId>com.inco</groupId>
             <artifactId>pub</artifactId>
             <version>0.0.1-SNAPSHOT</version>
 
-        </dependency>
+        </dependency>-->
 
 
     </dependencies>
